courses/430_programming-languages/assignment-6/tests/error/hw4_error21.nex
var j:int; var i:bool;
print "should not get here:n";
1 / 0;
   i = true;
   j = 5;
   while (i)
   {
      if (j < 0)
      {
         i = none;
      }
      j = j - 1;
      print j;
      print ":n";
   }
